// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onChange when clear is clicked 1`] = `
<div
  className="date-selector  mko_1vy27dt-dateSelector"
  id="jest-date-selector"
>
  <ClearableInput
    className=" mko_1vy27dt-dateSelector__input"
    containerClassName="date-selector__input  mko_1vy27dt-dateSelector__inputContainer"
    id="jest-ctrl"
    label="Date"
    maxNumberText={[Function]}
    onChange={[Function]}
    pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
    placeholder="__/__/____"
    type="date"
    value="2019-04-05"
  />
  <Button
    aria-label="Clear date"
    btnSize="small"
    className="date-selector__button date-selector__clear"
    icon="❌︎"
    onClick={[Function]}
    type="button"
  />
  <Button
    aria-label="Open calendar"
    btnSize="small"
    className="date-selector__button date-selector__open"
    icon="📅︎"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`should not display clear button when value required 1`] = `
<div
  className="date-selector  mko_1vy27dt-dateSelector"
  id="jest-date-selector"
>
  <ClearableInput
    className=" mko_1vy27dt-dateSelector__input"
    containerClassName="date-selector__input  mko_1vy27dt-dateSelector__inputContainer"
    id="jest-ctrl"
    label="Date"
    maxNumberText={[Function]}
    onChange={[Function]}
    pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
    placeholder="__/__/____"
    required={true}
    type="date"
    value="2019-04-05"
  />
  <Button
    aria-label="Open calendar"
    btnSize="small"
    className="date-selector__button date-selector__open"
    icon="📅︎"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`should open calendar 1`] = `
<div
  className="date-selector date-selector--read-only  mko_1vy27dt-dateSelector"
  id="jest-date-selector"
>
  <ClearableInput
    className=" mko_1vy27dt-dateSelector__input"
    containerClassName="date-selector__input  mko_1vy27dt-dateSelector__inputContainer"
    id="jest-ctrl"
    label="Date"
    maxNumberText={[Function]}
    onChange={[Function]}
    pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
    placeholder="__/__/____"
    type="date"
    value="2019-04-05"
  />
  <Button
    aria-label="Open calendar"
    btnSize="small"
    className="date-selector__button date-selector__open"
    icon="📅︎"
    onClick={[Function]}
    type="button"
  />
  <Calendar
    className=""
    id="jest"
    isFlat={false}
    onClose={[Function]}
    onSelect={[Function]}
    selected="2019-04-05"
  />
</div>
`;

exports[`should render flat view 1`] = `
<div
  className="date-selector date-selector--read-only  mko_1vy27dt-dateSelector"
  id="jest-date-selector"
>
  <Calendar
    className=""
    id="jest"
    isFlat={true}
    onClose={[Function]}
    onSelect={[Function]}
    selected="2019-04-05"
  />
</div>
`;

exports[`should render standard view 1`] = `
<div
  className="date-selector date-selector--read-only  mko_1vy27dt-dateSelector"
  id="jest-date-selector"
>
  <ClearableInput
    className=" mko_1vy27dt-dateSelector__input"
    containerClassName="date-selector__input  mko_1vy27dt-dateSelector__inputContainer"
    id="jest-ctrl"
    label="Date"
    maxNumberText={[Function]}
    onChange={[Function]}
    pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
    placeholder="__/__/____"
    type="date"
    value="2019-04-05"
  />
  <Button
    aria-label="Open calendar"
    btnSize="small"
    className="date-selector__button date-selector__open"
    icon="📅︎"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`should render with minimum props 1`] = `
<div
  className="date-selector date-selector--read-only  mko_1vy27dt-dateSelector"
  id="jest-date-selector"
>
  <ClearableInput
    className=" mko_1vy27dt-dateSelector__input"
    containerClassName="date-selector__input  mko_1vy27dt-dateSelector__inputContainer"
    id="jest-ctrl"
    label="Date"
    maxNumberText={[Function]}
    onChange={[Function]}
    pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"
    placeholder="__/__/____"
    type="date"
    value="2019-04-05"
  />
  <Button
    aria-label="Open calendar"
    btnSize="small"
    className="date-selector__button date-selector__open"
    icon="📅︎"
    onClick={[Function]}
    type="button"
  />
</div>
`;
